share/revng/test/tests/invalidation/four-functions.S.add-segment-customname.filecheck
#
# This file is distributed under the MIT License. See LICENSE.md for details.
#

---
Changes:
  - Path: "/Segments/0x500000:Generic64-9/CustomName"
    Remove: ""
    Add: "mysegment"
...

# CHECK-NOT: lift:
